# rush

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: cli.rs  diff.rs  hash.rs  main.rs  md5_hasher.rs  merkle_trees.rs  mt.rs  utils.rs
src/commands/: build.rs  diff.rs  hash.rs  mod.rs
src/hashers/: blake3.rs  md5.rs  mod.rs  sha256.rs  utils.rs
