[package]
name = "rush"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
md-5 = "0.10.6"
rayon = "1.11.0"
rs_merkle = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
