[package]
name = "rush"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
openssl = "0.10.73"
rayon = "1.11.0"
rs_merkle = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
