[package]
name = "rush"
version = "1.0.0"
authors = ["Nelson Antunes <me@nelsonantunes.com>"]
edition = "2024"
license = "MIT"
description = "CLI for dataset hashing and comparison"


[dependencies]
anyhow = "1.0.99"
blake3 = "1.8.2"
clap = { version = "4.5.47", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
openssl = "0.10.73"
rs_merkle = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
